bk_ida/gccida/c2/convert_to_real
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_to_real/src/convert.c:544:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_to_real/src/convert.c:545:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_to_real/src/convert.c:557:18: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
return build1( ( tree_code)v5, type, expr); 
                 ^~~~~~~~~
                 tree_cons
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_to_real/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_to_real/src/convert.c:557:28: error: expected ')'
return build1( ( tree_code)v5, type, expr); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_to_real/src/convert.c:557:14: note: to match this '('
return build1( ( tree_code)v5, type, expr); 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_to_real/src/convert.c:560:18: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
return build1( ( tree_code)v5, type, expr); 
                 ^~~~~~~~~
                 tree_cons
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_to_real/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_to_real/src/convert.c:560:28: error: expected ')'
return build1( ( tree_code)v5, type, expr); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_to_real/src/convert.c:560:14: note: to match this '('
return build1( ( tree_code)v5, type, expr); 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_to_real/src/convert.c:573:14: error: expected identifier or '('
 struct expr = ( tree)*( &global_trees + 11); 
             ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_to_real/src/obj/convert.o] Error 1
